<resources>
    <string name="app_name">Android UI Testing</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="place_order">Place Order</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="order_placed_successfully">Order Place Successfully</string>
</resources>
